chore: add Dockerfile and update render.yaml for Docker deploy

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,7 @@ services:
   - type: web
     name: springboot-app
     plan: free
-    buildCommand: ./mvnw clean package
-    startCommand: java -jar target/*.jar
-    region: oregon
     branch: main
+    region: oregon
+    dockerfilePath: ./Dockerfile
     autoDeploy: true
