fix: set runtime to docker

--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,6 @@ services:
     plan: free
     branch: main
     region: oregon
+    runtime: docker
     dockerfilePath: ./Dockerfile
     autoDeploy: true
