--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.mvc.view.suffix=.jsp
 
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-cvnvvo3e5dus73e2aq9g-a:5432/springboot_db_8308
-spring.datasource.username=springboot_db_8308_user
-spring.datasource.password=3A4utCypPF5ap1W24zzAWoGxzbMimlVG
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=0983
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # Hibernate Properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
